build with proper docker version

--- a/ci/Dockerfile-aws-cli
+++ b/ci/Dockerfile-aws-cli
@@ -1,3 +1,8 @@
-FROM 'amazon/aws-cli'
-RUN yum install docker -y
-RUN yum install jq -y
+FROM amazon/aws-cli
+
+RUN yum install -y jq curl \
+    && curl -L https://download.docker.com/linux/static/stable/x86_64/docker-26.1.0.tgz \
+    | tar -xz \
+    && mv docker/docker /usr/local/bin/docker \
+    && rm -rf docker \
+    && docker --version
