--- a/ci/Dockerfile-aws-cli
+++ b/ci/Dockerfile-aws-cli
@@ -1,8 +1,13 @@
 FROM amazon/aws-cli
 
-RUN yum install -y jq curl \
+RUN yum install -y \
+        jq \
+        curl \
+        tar \
+        gzip \
+        ca-certificates \
     && curl -L https://download.docker.com/linux/static/stable/x86_64/docker-26.1.0.tgz \
-    | tar -xz \
+       | tar -xz \
     && mv docker/docker /usr/local/bin/docker \
     && rm -rf docker \
     && docker --version
